# uget-android

./: README.md  settings.gradle
aFileDialog/: build.gradle
aFileDialog/src/main/: AndroidManifest.xml
aFileDialog/src/main/res/layout/: daidalos_file_chooser.xml
aFileDialog/src/main/res/values/: strings.xml
aFileDialog/src/main/res/values-es/: strings.xml
aFileDialog/src/main/res/values-fr/: strings.xml
aFileDialog/src/main/res/values-ja/: strings.xml
aFileDialog/src/main/res/values-ro/: strings.xml
aFileDialog/src/main/res/values-ru/: strings.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/ugetdm/uget/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Ccj.c  Core.c  Info.c  Node.c  Rpc.c  Sequence.c  Util.c
app/src/main/cpp/uget/: UgetPluginAria2.c  UgetRpc.c
app/src/main/java/com/ugetdm/uget/: AdManager.java  AppCompatPreferenceActivity.java  CategoryAdapter.java  DownloadAdapter.java  FileUtil.java  Job.java  MainActivity.java  MainApp.java  MainService.java  NeLinearLayoutManager.java  NodeActivity.java  ProxyTypeAdapter.java  SequenceForm.java  Setting.java  SettingsActivity.java  SpinnerItems.java  StateAdapter.java  TimeoutHandler.java  TimerHandler.java  UriBatchInterface.java  ViewPagerAdapter.java
app/src/main/res/drawable/: ic_all_inclusive.xml  ic_archive.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_batch.xml  ic_category.xml  ic_category_light.xml  ic_edit.xml  ic_error.xml  ic_export.xml  ic_import.xml  ic_sort_09.xml  ic_sort_az.xml  selector_item.xml  selector_item_category.xml  selector_item_download.xml  selector_item_text.xml
app/src/main/res/layout/: activity_main.xml  activity_node.xml  app_bar_main.xml  app_bar_node.xml  category_item.xml  content_main.xml  content_node.xml  download_item.xml  form_category.xml  form_download.xml  form_sequence.xml  item_category.xml  item_download.xml  item_proxy.xml  item_spinner.xml  traveler_main.xml  traveler_node.xml
app/src/main/res/layout-sw600dp-land/: activity_main.xml  activity_node.xml
app/src/main/res/menu/: main.xml  main_category.xml  main_popup.xml  node.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-sw360dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: pref_about.xml  pref_aria2.xml  pref_clipboard.xml  pref_headers.xml  pref_media.xml  pref_other.xml  pref_plugin.xml  pref_speed.xml  pref_ui.xml
app/src/test/java/com/ugetdm/uget/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
